# Ectus-R

./: .aion-locked.example  .env.example  .gitignore  .linter-rules-professional-docs.md  ACCESO_PUBLICO.md  ARCHITECTURE.md  AUDITORIA-COMPLETA-FINAL-2025-10-02.md  AUDIT_COMPARISON_ANALYSIS.md  AUDIT_RESPONSE.md  BENCHMARKS.md  CERTIFICADO_SAT_INFO.md  CHANGELOG.md  CLAUDE-CONTEXT-MEMORY.md  CLAUDE.md  COMPILACION-EXITOSA.md  CONTEXTO-MIGRACION-D.md  CONTEXTO-SESION-ACTUAL.md  CONTEXTO_COMPILACION_MODULAR.md  CONTRIBUTING.md  CUSTOM_DOMAIN_STATUS.md  Cargo.toml  DEMO_ACCESS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEVOPS_COMPLETION_SUMMARY.md  DIAGNOSTICO_CONEXION_DEMO.md  DOCUMENTATION_CORRECTIONS_REQUIRED.md  Dockerfile.production  ECTUS-R_SOFTWARE_DEVELOPMENT_PROCESS_ANALYSIS.md  ENTERPRISE_DEPLOYMENT_CHECKLIST.md  ESTADO_SISTEMA.md  EVIDENCIA_TESTS_DEFICIENTES.md  EXECUTIVE_REPORT_C_SUITE.md  EXECUTIVE_REPORT_C_SUITE_BACKUP.md  EXECUTIVE_SUMMARY_AUDIT.md  FASE-0-PROGRESO.md  FASE-1-PROGRESO.md  FINAL_ACHIEVEMENT_SUMMARY.md  FINAL_REMEDIATION_REPORT.md  (+77 more)
crates/aion-ai-engine/: Cargo.toml
crates/aion-ai-engine/src/: advanced_ai_assistant.rs  ai_providers.rs  ast_parser.rs  audio.rs  autocorrection_cycle.rs  autonomous_qa.rs  autonomous_qa_enhanced.rs  autonomous_qa_real.rs  autonomous_qa_unlimited.rs  bug_prediction.rs  code_generation.rs  documentation_generator.rs  errors.rs  inference.rs  lib.rs  llm_providers.rs  locked_files.rs  metrics.rs  model_manager.rs  models.rs  nlp.rs  performance.rs  predictive_security.rs  progress_tracking.rs  project_scaffolding.rs  refactoring_engine.rs  refactoring_operations.rs  requirements_analyzer.rs  template_engine.rs  test_integration.rs  traditional_ml.rs  vision.rs  vulnerability_scanner.rs
crates/aion-ai-engine/templates/rust/: Cargo.toml.hbs
crates/aion-ai-engine/tests/: integration_tests.rs
crates/aion-analysis/: Cargo.toml
crates/aion-analysis/src/: ai.rs  ast.rs  language.rs  lib.rs  metrics.rs  patterns.rs  performance.rs  refactor.rs  security.rs  suggestions.rs
crates/aion-analysis/src/analyzer/: javascript_analyzer.rs  mod.rs  multi_language_analyzer.rs  python_analyzer.rs  rust_analyzer.rs  typescript_analyzer.rs
crates/aion-api-client/: Cargo.toml
crates/aion-api-client/src/: client.rs  error.rs  lib.rs  progress.rs  projects.rs  qa.rs  templates.rs  types.rs  websocket.rs
crates/aion-api-gateway/: Cargo.toml
crates/aion-api-gateway/src/: circuit_breaker.rs  gateway.rs  gateway.rs.corrupted  health_check.rs  lib.rs  load_balancer.rs  middleware.rs  rate_limiting.rs  routing.rs
crates/aion-auth/: Cargo.toml
crates/aion-auth/src/: authentication.rs  authorization.rs  jwt.rs  lib.rs  middleware.rs  models.rs  oauth.rs  session.rs
crates/aion-cicd/: Cargo.toml
crates/aion-cicd/src/: lib.rs
crates/aion-cicd/src/deployment/: mod.rs
crates/aion-cicd/src/pipeline/: mod.rs
crates/aion-cicd/src/quality/: mod.rs
crates/aion-cicd/src/testing/: mod.rs
crates/aion-cli/: Cargo.toml
crates/aion-cli/src/: client.rs  config.rs  main.rs  output.rs  utils.rs
crates/aion-cli/src/commands/: generate.rs  mod.rs  new.rs
crates/aion-cloud/: Cargo.toml
crates/aion-cloud/src/: lib.rs  unified_orchestrator.rs
crates/aion-cloud/src/kubernetes/: mod.rs
crates/aion-compliance/: Cargo.toml
crates/aion-compliance/src/: hipaa.rs  lib.rs
crates/aion-core/: Cargo.toml
crates/aion-core/src/: cache.rs  enterprise.rs  events.rs  health.rs  lib.rs  logging.rs  metrics.rs  platform.rs  secrets_manager.rs
crates/aion-database/: Cargo.toml
crates/aion-database/src/: connection.rs  lib.rs  metrics.rs  migrations.rs  pool.rs  schema.rs
crates/aion-enterprise/: Cargo.toml
crates/aion-enterprise/src/: lib.rs
crates/aion-licensing/: Cargo.toml
crates/aion-licensing/src/: lib.rs
crates/aion-marketplace/: Cargo.toml
crates/aion-marketplace/src/: analytics.rs  api.rs  config.rs  core.rs  database.rs  errors.rs  lib.rs  models.rs  notifications.rs  payments.rs  search.rs  security.rs  storage.rs  validation.rs
crates/aion-monitoring/: Cargo.full.toml  Cargo.toml
crates/aion-monitoring/src/: enterprise_monitoring.rs  lib.full.rs  lib.rs  prometheus_exporter.rs  prometheus_exporter_v2.rs  real_time_monitor.rs  test_integration.rs  tracing.rs  websocket_service.rs
crates/aion-optimization-engine/: Cargo.toml
crates/aion-optimization-engine/src/: auto_tuner.rs  integration.rs  lib.rs  metrics_collector.rs  ml_optimizer.rs  models.rs  predictive_analyzer.rs  recommendation_engine.rs  telemetry.rs
crates/aion-plugin-system/: Cargo.toml
crates/aion-plugin-system/src/: config.rs  errors.rs  events.rs  lib.rs  loader.rs  manager.rs  marketplace.rs  plugin.rs  runtime.rs  security.rs
crates/aion-server/: Cargo.toml
crates/aion-server/src/: config.rs  errors.rs  main.rs  middleware.rs  state.rs
crates/aion-web-api/: Cargo.toml
crates/aion-web-api/docs/: api.html
crates/aion-web-api/src/: main.rs  openapi.rs  secrets_manager.rs
crates/aion-web-api/tests/: api_integration_tests.rs
docs/: API.md  ARCHITECTURE.md  AUTONOMOUS_QA_GUIDE.md  CNAME  Cargo.toml  DECOMMISSIONING.md  DEPLOYMENT.md  INSTALLATION.md  MONITORING.md  demo.html  index.html  landing.html  magic-loop.html  test-demo-connection.html
docs/deployment/: secrets-management.md
docs/operations/: incident-response.md  on-call.md
docs/runbooks/: high_error_rate.md  service_down.md
docs/src/: lib.rs
sdk/python/: pyproject.toml
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
services/gateway-service/: Cargo.toml
services/gateway-service/src/: main.rs
tests/: Cargo.toml  e2e_autonomous_qa_test.rs  integration_magic_loop.rs  lib.rs  optimization_tests.rs
tests/e2e/: complete_workflow_test.rs
tests/integration/: api_tests.rs  mod.rs  monitoring_integration_tests.rs  performance_tests.rs  system_tests.rs
tests/load/: api-load-test.js  monitoring_load_test.js
tests/monitoring/: monitoring_tests.rs
tests/unit/: ai_engine_tests.rs  auth_tests.rs  core_tests.rs  database_tests.rs  mod.rs
(+190 files in other folders)
