[package]
name = "ectus-r"
version = "1.0.0"
edition = "2021"
description = "Enterprise AI Code Generation Platform - Powered by AION-R Engine"
authors = ["Yatrogenesis <info@yatrogenesis.com>"]
license = "MIT"
repository = "https://github.com/Yatrogenesis/Ectus-R"

[workspace]
members = [
    "crates/aion-enterprise",
    "crates/aion-monitoring",
    "crates/aion-ai-engine",
    "crates/aion-web-api",
    "crates/aion-optimization-engine",
    "crates/aion-server"
]

[dependencies]
# Core framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"], optional = true }

# Security and authentication
jsonwebtoken = { version = "9.0", optional = true }
argon2 = { version = "0.5", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Networking and HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# System monitoring
sysinfo = "0.30"

# Message queues
lapin = { version = "2.3", optional = true }  # RabbitMQ
rdkafka = { version = "0.36", optional = true }  # Apache Kafka

# Caching
moka = { version = "0.12", features = ["future"] }

# Enterprise database pooling
deadpool-postgres = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
aion-optimization-engine = { path = "crates/aion-optimization-engine" }
aion-monitoring = { path = "crates/aion-monitoring" }
futures = "0.3"

[[bench]]
name = "optimization_benchmarks"
harness = false

# Binarios problemáticos comentados temporalmente
# [[bin]]
# name = "ectus-server"
# path = "crates/aion-server/src/main.rs"

# [[bin]]
# name = "ectus-cli"
# path = "crates/aion-cli/src/main.rs"

[features]
default = ["postgres", "redis", "monitoring", "security"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
redis = ["dep:redis"]
monitoring = ["dep:metrics", "dep:opentelemetry", "dep:metrics-exporter-prometheus"]
security = ["dep:jsonwebtoken", "dep:argon2"]
kafka = ["dep:rdkafka"]
rabbitmq = ["dep:lapin"]
integration-tests = []
test-mode = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
