[package]
name = "aion-r-tests"
version = "1.0.0"
edition = "2021"
description = "Comprehensive test suite for AION-R Enterprise Platform"
authors = ["AION-R Team"]

[dependencies]
# Core AION-R crates
aion-core = { path = "../crates/aion-core" }
aion-ai-engine = { path = "../crates/aion-ai-engine" }
aion-auth = { path = "../crates/aion-auth" }
aion-database = { path = "../crates/aion-database" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Testing frameworks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for integration tests
reqwest = { version = "0.11", features = ["json", "stream"] }

# System monitoring
sysinfo = "0.30"

# Logging
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database testing
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }

# Performance testing
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Utilities
base64 = "0.21"
rand = "0.8"
tempfile = "3.0"

[dev-dependencies]
# Additional test utilities
mockall = "0.11"
wiremock = "0.5"
testcontainers = "0.14"

[features]
default = []
test-runner = []
integration-tests = []
performance-tests = []
system-tests = []

[[bin]]
name = "test-runner"
path = "bin/test-runner.rs"
required-features = ["test-runner"]

[lib]
name = "aion_r_tests"
path = "lib.rs"

# Test configurations
[[test]]
name = "unit_tests"
path = "unit/mod.rs"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"
required-features = ["integration-tests"]

[[test]]
name = "performance_tests"
path = "integration/performance_tests.rs"
required-features = ["performance-tests"]

[[test]]
name = "system_tests"
path = "integration/system_tests.rs"
required-features = ["system-tests"]

# Benchmark configurations
[[bench]]
name = "ai_engine_benchmarks"
harness = false
required-features = ["performance-tests"]

[[bench]]
name = "auth_benchmarks"
harness = false
required-features = ["performance-tests"]

[[bench]]
name = "database_benchmarks"
harness = false
required-features = ["performance-tests"]

[profile.test]
debug = true
opt-level = 0

[profile.bench]
debug = false
opt-level = 3
lto = true