[package]
name = "aion-ai-engine"
version = "1.0.0"
edition = "2021"
description = "AI/ML engine for AION-R"

[dependencies]
aion-core = { path = "../aion-core" }

# AI/ML frameworks
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
torch = { version = "0.1", optional = true }
tensorflow = { version = "0.21", optional = true }
ort = { version = "1.16", features = ["copy-dylibs"], optional = true }  # ONNX Runtime

# Machine Learning utilities
nalgebra = "0.32"
ndarray = "0.15"
linfa = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }
linfa-linear = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
smartcore = { version = "0.3", optional = true }

# Text processing and NLP
tokenizers = { version = "0.15", optional = true }
hf-hub = { version = "0.3", optional = true }
regex = "1.10"
unicode-normalization = "0.1"

# Image processing
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }

# Audio processing
rodio = { version = "0.17", optional = true }
whisper-rs = { version = "0.10", optional = true }

# Async and concurrent processing
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rayon = "1.8"
dashmap = "5.5"
arc-swap = "1.6"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
metrics = "0.22"

# Memory management
bytes = "1.5"

# Configuration
config = "0.14"

# Time and UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for model downloads
reqwest = { version = "0.11", features = ["json", "stream"] }

# Compression
flate2 = "1.0"
tar = "0.4"

# Template engine
handlebars = "4.5"

# AST parsing for refactoring engine
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"

[features]
default = []
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
torch = ["dep:torch"]
tensorflow = ["dep:tensorflow"]
onnx = ["dep:ort"]
nlp = ["dep:tokenizers", "dep:hf-hub"]
vision = ["dep:image", "dep:imageproc"]
audio = ["dep:rodio", "dep:whisper-rs"]
training = ["dep:linfa", "dep:smartcore", "dep:linfa-clustering", "dep:linfa-linear", "dep:linfa-trees"]