[package]
name = "aion-api-client"
version = "0.1.0"
edition = "2021"
authors = ["AION Team <dev@aion.dev>"]
description = "Rust SDK for AION autonomous software engineering platform"
license = "MIT"
repository = "https://github.com/aion-labs/ectus-r"
keywords = ["ai", "autonomous", "software-engineering", "api", "sdk"]
categories = ["api-bindings", "development-tools"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.0"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"