[package]
name = "aion-cicd"
version = "0.1.0"
edition = "2021"
authors = ["AION Team <team@aion.dev>"]
description = "Comprehensive CI/CD pipelines and testing framework for AION platform"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# Web server and API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database and persistence
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Git operations
git2 = "0.18"
octocrab = "0.32"

# Container and orchestration
bollard = "0.15"
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Testing frameworks
cargo_metadata = "0.18"
tarpaulin = "0.27"
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
mockall = "0.12"
wiremock = "0.5"
testcontainers = "0.15"

# Code quality and analysis
clippy = "0.0.302"
rustfmt-nightly = "1.7"
cargo-audit = "0.18"
cargo-deny = "0.14"
cargo-outdated = "0.13"
cargo-bloat = "0.12"
cargo-machete = "0.6"

# Performance and profiling
flamegraph = "0.6"
perf-event = "0.4"
pprof = "0.12"

# Security scanning
rustsec = "0.28"
cargo-geiger = "0.11"

# Documentation
cargo-doc = "0.1"
mdbook = "0.4"

# Deployment tools
helm = "0.3"
terraform = "0.19"
ansible = "0.11"

# Notification systems
slack-hook = "0.8"
discord = "0.12"
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls"] }

# Artifact management
tar = "0.4"
flate2 = "1.0"
zip = "0.6"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }
validator = { version = "0.20", features = ["derive"] }

# Parallel execution
rayon = "1.8"
crossbeam = "0.8"

# File operations
walkdir = "2.4"
tempfile = "3.8"
notify = "6.1"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Template engines
tera = "1.19"
handlebars = "4.5"

# Metrics
prometheus = "0.14"
metrics = "0.21"

# Workflow engines
workflow = "0.4"
petgraph = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["github-actions", "gitlab-ci", "jenkins", "docker", "kubernetes"]
github-actions = ["octocrab"]
gitlab-ci = []
jenkins = []
azure-devops = []
circleci = []
travis-ci = []
docker = ["bollard"]
kubernetes = ["kube", "k8s-openapi"]
terraform = []
ansible = []
helm = []
security-scanning = ["rustsec", "cargo-geiger"]
performance-testing = ["criterion", "flamegraph", "pprof"]
load-testing = []
chaos-testing = []
contract-testing = []
visual-testing = []
accessibility-testing = []
cross-platform-testing = []
mobile-testing = []
api-testing = []
database-testing = []
integration-testing = []
e2e-testing = []
smoke-testing = []
regression-testing = []
compliance-testing = []
security-testing = ["security-scanning"]
code-quality = ["clippy", "rustfmt-nightly", "cargo-audit"]
documentation = ["cargo-doc", "mdbook"]
artifact-management = ["tar", "flate2", "zip"]
notification = ["slack-hook", "discord", "lettre"]
metrics = ["prometheus", "metrics"]
enterprise = ["security-testing", "compliance-testing", "performance-testing", "code-quality"]

[[bin]]
name = "aion-cicd"
path = "src/bin/main.rs"

[[bin]]
name = "aion-pipeline-runner"
path = "src/bin/pipeline_runner.rs"

[[bin]]
name = "aion-test-runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "aion-deploy-runner"
path = "src/bin/deploy_runner.rs"

[[bin]]
name = "aion-quality-gate"
path = "src/bin/quality_gate.rs"