[package]
name = "aion-core"
version = "1.0.0"
edition = "2021"
description = "Core enterprise platform services for AION-R"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
rand = "0.8"

# System monitoring
sysinfo = "0.30"

# Enterprise features
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }