[package]
name = "aion-enterprise"
version = "0.1.0"
edition = "2021"
authors = ["AION Team <team@aion.dev>"]
description = "Enterprise on-premise deployment system for AION platform"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# Web server and API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "auth"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "json", "uuid", "chrono", "decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "json", "cluster"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Containerization and orchestration
bollard = "0.15"
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
docker-api = "0.14"

# Infrastructure provisioning
terraform = "0.19"
ansible = "0.11"
pulumi = "0.3"

# Configuration management
config = "0.14"
toml = "0.8"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
clap = { version = "4.4", features = ["derive", "env"] }

# Cryptography and security
ring = "0.17"
jsonwebtoken = "9.2"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
rsa = "0.9"
aes-gcm = "0.10"
x509-parser = "0.16"
rustls = "0.21"
rustls-pemfile = "1.0"

# Networking and load balancing
tokio-tungstenite = "0.21"
futures-util = "0.3"
hyper-rustls = "0.24"
trust-dns-resolver = "0.23"

# File system operations
walkdir = "2.4"
tempfile = "3.8"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"

# System monitoring
sysinfo = "0.30"
systemstat = "0.2"
procfs = "0.16"

# Process management
nix = "0.27"
libc = "0.2"

# Backup and restore
backup = "0.4"
rclone = "0.2"

# High availability
consul = "0.4"
etcd = "0.12"
raft = "0.7"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"
jaeger = "0.20"

# Email and notifications
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls", "builder"] }
slack-hook = "0.8"
discord = "0.12"

# Template engines
tera = "1.19"
handlebars = "4.5"

# Certificate management
acme-lib = "0.8"
rcgen = "0.11"

# Secrets management
vault = "0.17"
age = "0.10"
sealed-secrets = "0.2"

# Audit logging
audit-log = "0.2"
slog = "2.7"
slog-json = "2.6"

# Health checks
health-check = "0.2"
pingora = "0.1"

# Migration tools
migration = "0.6"

# Testing
mockall = "0.12"
wiremock = "0.5"
testcontainers = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["full-stack"]
full-stack = ["kubernetes", "docker", "bare-metal", "cloud-integration"]
kubernetes = ["kube", "k8s-openapi"]
docker = ["bollard", "docker-api"]
bare-metal = ["ansible", "terraform"]
cloud-integration = ["aws", "gcp", "azure"]
aws = []
gcp = []
azure = []
high-availability = ["consul", "etcd", "raft"]
monitoring = ["prometheus", "metrics", "opentelemetry"]
security = ["vault", "sealed-secrets", "acme-lib"]
backup = ["rclone", "backup"]
compliance = ["audit-log", "slog"]
enterprise = ["high-availability", "monitoring", "security", "backup", "compliance"]

[[bin]]
name = "aion-enterprise"
path = "src/bin/main.rs"

[[bin]]
name = "aion-deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "aion-admin"
path = "src/bin/admin.rs"