[package]
name = "aion-enterprise"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
url = "2.5"
